--- a/Hospital/Hospital-empresarial/.project
+++ b/Hospital/Hospital-empresarial/.project
@@ -3,6 +3,7 @@
 	<name>Hospital-empresarial</name>
 	<comment></comment>
 	<projects>
+		<project>Hospital-persistencia</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
