--- a/Hospital/Hospital-percistencia/.project
+++ b/Hospital/Hospital-percistencia/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hospital-percistencia</name>
+	<name>Hospital-persistencia</name>
 	<comment></comment>
 	<projects>
 	</projects>
