--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -15,3 +15,9 @@ usuario.username=Nombre de usuario
 usuario.password=Contraseña
 usuario.registrar=REGISTRAR
 usuario.cancelar=LIMPIAR CAMPOS
+usuario.editar=EDITAR
+usuario.eliminar=ELIMINAR
+usuario.buscar=BUSCAR
+
+instalacion.numero=Número
+instalacion.descripcion=Descripción
