--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -1,5 +1,6 @@
 usuario.identificacion=Identificación
 usuario.tipoId=Tipo de identificación
+usuario.identificacionPaciente = Identificación del paciente
 usuario.cedula=Cédula
 usuario.tarjeta=Tarjeta de identidad
 usuario.pasaporte=Pasaporte
@@ -18,6 +19,14 @@ usuario.cancelar=LIMPIAR CAMPOS
 usuario.editar=EDITAR
 usuario.eliminar=ELIMINAR
 usuario.buscar=BUSCAR
+usuario.darAlta = DAR DE ALTA
+usuario.editarFecha=EDITAR FECHA DE SALIDA
+usuario.nuevaFechaSalida=Nueva fecha de salida
+usuario.fechaSalida=Fecha de salida
+usuario.seleccioneFecha = Seleccione la fecha
+usuario.fecha=Fecha
+usuario.hora = Hora
+usuario.atender = Atender
 
 instalacion.numero=Número
 instalacion.descripcion=Descripción
