--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -18,6 +18,11 @@ usuario.cancelar=LIMPIAR CAMPOS
 usuario.editar=EDITAR
 usuario.eliminar=ELIMINAR
 usuario.buscar=BUSCAR
-
 instalacion.numero=Número
 instalacion.descripcion=Descripción
+cirugia.fecha=Fecha
+cirugia.QuirofanosDisponibles=Quirofanos Disponibles
+cirugia.TipoCirugia=Tipo de Cirugia
+cirugia.cirugia=Cirugia
+cirugia.anotaciones=Anotaciones
+cirugia.Registrar=ORDENAR
