--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -18,6 +18,9 @@ usuario.cancelar=LIMPIAR CAMPOS
 usuario.editar=EDITAR
 usuario.eliminar=ELIMINAR
 usuario.buscar=BUSCAR
+usuario.usuario=Nombre de Usuario
+usuario.password=Contraseña
+usuario.LogIn=Iniciar Sesion
 
 instalacion.numero=Número
 instalacion.descripcion=Descripción
