--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -39,3 +39,8 @@ cirugia.TipoCirugia=Tipo de Cirugia
 cirugia.cirugia=Cirugia
 cirugia.anotaciones=Anotaciones
 cirugia.Registrar=ORDENAR
+hospitalizacion.cita = Cita
+hospitalizacion.fechaEntrada = Fecha de Entrada
+hospitalizacion.fechaSalida= Fecha de Salida
+hospitalizacion.camaDisponible = Cama Disponible
+hospitalizacion.Ordenar = Ordenar
