--- a/Hospital/Hospital-web/pom.xml
+++ b/Hospital/Hospital-web/pom.xml
@@ -64,6 +64,11 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.8</version>
+        </dependency>
 	</dependencies>
 
 	<build>
