--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -39,8 +39,12 @@ cirugia.TipoCirugia=Tipo de Cirugia
 cirugia.cirugia=Cirugia
 cirugia.anotaciones=Anotaciones
 cirugia.Registrar=ORDENAR
+cita.anotaciones = Anotaciones
 hospitalizacion.cita = Cita
-hospitalizacion.fechaEntrada = Fecha de Entrada
-hospitalizacion.fechaSalida= Fecha de Salida
 hospitalizacion.camaDisponible = Cama Disponible
 hospitalizacion.Ordenar = Ordenar
+cita.horario = Hora Cita
+cita.cita = Cita
+cita.tipoCita = Tipo de cita
+cita.personalMedico = Personal Medico
+cita.paciente = Paciente
