--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -22,6 +22,9 @@ usuario.buscar=BUSCAR
 usuario.usuario=Nombre de Usuario
 usuario.password=Contraseña
 usuario.LogIn=Iniciar Sesion
+usuario.eps = Eps
+usuario.accion = Acción
+usuario.habilitar = Hablitar
 
 usuario.darAlta = DAR DE ALTA
 usuario.editarFecha=EDITAR FECHA DE SALIDA
