Correciones de las correcciones

--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -25,6 +25,7 @@ usuario.LogIn=Iniciar Sesion
 usuario.eps = Eps
 usuario.accion = Acción
 usuario.habilitar = Hablitar
+usuario.verCitas= Ver citas
 
 usuario.darAlta = DAR DE ALTA
 usuario.editarFecha=EDITAR FECHA DE SALIDA
