--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -26,7 +26,7 @@ usuario.eps = Eps
 usuario.accion = Acción
 usuario.habilitar = Hablitar
 usuario.verCitas= Ver citas
-
+masOpcionesQuirofano = Numero Quirofano
 usuario.darAlta = DAR DE ALTA
 usuario.editarFecha=EDITAR FECHA DE SALIDA
 usuario.nuevaFechaSalida=Nueva fecha de salida
@@ -37,6 +37,10 @@ usuario.hora = Hora
 usuario.atender = Atender
 instalacion.numero=Número
 instalacion.descripcion=Descripción
+instalacion.estado= Disponibilidad
+instalaciones.acciones= Acciones
+instalaciones.eliminar=Eliminar
+instalaciones.editar = Editar
 cirugia.fecha=Fecha
 cirugia.QuirofanosDisponibles=Quirofanos Disponibles
 cirugia.TipoCirugia=Tipo de Cirugia
