--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -56,3 +56,7 @@ cita.cita = Cita
 cita.tipoCita = Tipo de cita
 cita.personalMedico = Personal Medico
 cita.paciente = Paciente
+insumos.ide= Codigo
+insumos.cantidad = Cantidad
+insumos.descripcion = Nombre Medicamento
+insumos.codigo=Codigo
