--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -32,6 +32,12 @@ usuario.fechaSalida = Fecha de salida
 usuario.causa = Causa
 usuario.causaExamen = Causa orden de Examen
 usuario.causaCirugia = Causa orden de Cirugía
+usuario.horaInicio = Hora inicio
+usuario.horaFin = Hora Fin
+usuario.dia = Día
+usuario.tipoId = Tipo identificación
+usuario.diaHorario = Dia
+usuario.agregarHorario = Agregar Horario
 
 usuario.accion = Acción
 usuario.habilitar = Hablitar
