--- a/Hospital/Hospital-web/src/main/resources/mensajes.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes.properties
@@ -38,7 +38,7 @@ usuario.dia = Día
 usuario.tipoId = Tipo identificación
 usuario.diaHorario = Dia
 usuario.agregarHorario = Agregar Horario
-
+usuario.checkbox= Tiene Alguna Especializacion?
 usuario.accion = Acción
 usuario.habilitar = Hablitar
 usuario.verCitas= Ver citas
